# hal_telink

./: .gitignore  CMakeLists.txt
tlsr9/: CMakeLists.txt
tlsr9/ble/: config.h  drivers.h
tlsr9/ble/algorithm/: algorithm.h
tlsr9/ble/algorithm/aes_ccm/: aes_ccm.h
tlsr9/ble/algorithm/crypto/: crypto_alg.h
tlsr9/ble/algorithm/ecc/: ecc_curve.h  ecc_ll.h  hw_ecc.h
tlsr9/ble/algorithm/hadm/: hadm.h
tlsr9/ble/common/: assert.h  utility.c  utility.h
tlsr9/ble/stack/ble/: ble_config.h  ble_stack.h
tlsr9/ble/stack/ble/B91/: ble_config.h  ble_format.h  debug.h
tlsr9/ble/stack/ble/B91/controller/: ble_controller.h  os_sup.h
tlsr9/ble/stack/ble/B91/hci/: hci.h  hci_cmd.h  hci_event.h
tlsr9/ble/stack/ble/B92/: ble_common.h  ble_config.h  ble_format.h  debug_cfg.h
tlsr9/ble/stack/ble/B92/controller/: ble_controller.h  contr_comp.h  os_sup.h
tlsr9/ble/stack/ble/B92/hci/: hci.h  hci_cmd.h  (+2 more)
tlsr9/ble/stack/ble/B93/: ble.h  ble_config.h  ble_format.h  debug_cfg.h
tlsr9/ble/stack/ble/B95/: ble_config.h  ble_format.h
tlsr9/ble/stack/ble/TL321X/: ble.h  ble_common.h  ble_config.h  ble_format.h  ble_stack.h
tlsr9/common/: B91_sleep.c  b91_context.S  b91_sleep.c  b91_sleep.h  b9x_rf_power.c  b9x_rf_power.h  b9x_sleep.h  bit.h  compiler.h  sleep.c  types.h
tlsr9/common/B91/: sleep.c
tlsr9/common/B92/: sleep.c
tlsr9/crypto/mbedtls/: CMakeLists.txt  ecp_backend.c  ecp_backend_test.c  mbedtls-tlsr9-conf.h  mbedtls_wrapper.c  multithread.c  telink_b9x_mbedtls_user_config.h
tlsr9/crypto/mbedtls/internal/: ecp_alt_b92_backend.c  ecp_alt_b9x_backend.c  ecp_alt_b9x_backend_test.c  ecp_alt_tlx_backend.c
tlsr9/crypto/mbedtls/internal/compatibility/: aes_alt.c  ecp_alt.c
tlsr9/drivers/B91/: clock.h  flash.c  flash.h  mspi.h  spi.h  usbhw.h
tlsr9/drivers/B92/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.h  dma.h  driver.h  driver_b92.h  eccp_curve.h  emi.h  flash.c  flash.h  flash_base.c  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.c  mspi.h  pke.h  pke_utility.h  plic.h  plmt.h  pm.h  pwm.c  pwm.h  qdec.c  qdec.h  rf.h  (+16 more)
tlsr9/drivers/B92/ext_driver/: driver_ext.h  ext_aes.h  ext_audio.h  ext_codec.h  ext_gpio.h  ext_hci_uart.h  ext_lib.h  ext_misc.h  ext_pm.h  ext_rf.h  ext_uart.h  mcu_boot.h  mcu_config.h  software_pa.h
tlsr9/drivers/B92/ext_driver/driver_lib/: driver_lib.h  ext_aes.h  ext_lib.h  ext_rf.h
tlsr9/drivers/B92/flash/: flash_common.h  flash_mid146085.h  flash_mid156085.h  flash_mid1560c8.h  flash_mid166085.h  flash_mid1660c8.h  flash_mid186085.h
tlsr9/drivers/B92/lib/include/: flash_prot.h  pm.h  rf.h
tlsr9/drivers/B92/reg_include/: aes_reg.h  audio_reg.h  dma_reg.h  i2c_reg.h  mdec_reg.h  mspi_reg.h  pke_reg.h  plic_reg.h  pwm_reg.h  register.h  rf_reg.h  soc.h  spi_reg.h  stimer_reg.h  trng_reg.h  uart_reg.h  usb_reg.h
tlsr9/drivers/B93/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.h  dma.h  driver_b93.h  eccp_curve.h  emi.h  flash.c  flash.h  flash_base.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.h  pke.h  pke_utility.h  plic.h  pm.h  pwm.c  pwm.h  qdec.c  qdec.h  rf.h  s7816.c  s7816.h  spi.c  (+12 more)
tlsr9/drivers/B93/compatibility_pack/: cmpt.h
tlsr9/drivers/B93/ext_driver/: driver_ext.h  ext_lib.h  ext_misc.h  ext_pm.h
tlsr9/drivers/B93/reg_include/: adc_reg.h  aes_reg.h  analog_reg.h  audio_reg.h  dma_reg.h  gpio_reg.h  i2c_reg.h  mdec_reg.h  mspi_reg.h  pke_reg.h  plic_reg.h  pwm_reg.h  qdec_reg.h  register.h  rf_reg.h  soc.h  spi_reg.h  stimer_reg.h  swire_reg.h  timer_reg.h  trng_reg.h  uart_reg.h  usb_reg.h
tlsr9/drivers/B95/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  aoa.h  audio.c  audio.h  clock.c  clock.h  core.c  core.h  dma.h  driver.h  driver_b95.h  eccp_curve.h  emi.c  emi.h  flash.c  flash.h  flash_base.h  gpio.c  gpio.h  gpio_default.h  hadm.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.c  mspi.h  otp.c  otp.h  pke.h  pke_utility.h  plic.h  plic_sw.h  (+31 more)
tlsr9/drivers/B95/compatibility_pack/: cmpt.h
tlsr9/drivers/B95/ext_driver/: driver_ext.h  ext_audio.h  ext_codec.h  ext_hci_uart.h  ext_lib.h  ext_misc.h  ext_pm.h  ext_uart.h  mcu_boot.h  mcu_config.h  software_pa.h
tlsr9/drivers/B95/ext_driver/driver_lib/: ext_lib.h
tlsr9/drivers/B95/flash/: flash_common.h  flash_mid146085.h  flash_mid156085.h  flash_type.h
tlsr9/drivers/B95/lib/include/: flash_base.h  plic.h  pm.h  swire.h  sys.h
tlsr9/drivers/B95/reg_include/: adc_reg.h  aes_reg.h  analog_afe1v_reg.h  analog_afe3v_reg.h  analog_reg.h  audio_reg.h  chacha20_poly1305_reg.h  dma_reg.h  gpio_reg.h  hash_reg.h  i2c_reg.h  mdec_reg.h  mspi_reg.h  otp_reg.h  pke_reg.h  plic_reg.h  plic_sw_reg.h  plmt_reg.h  pwm_reg.h  qdec_reg.h  register.h  rf_reg.h  ske_reg.h  soc.h  spi_reg.h  stimer_reg.h  swire_reg.h  timer_reg.h  trng_reg.h  uart_reg.h  usb_reg.h
tlsr9/drivers/TL321X/: adc.c  adc.h  aes.c  analog.h  audio.h  clock.c  clock.h  core.h  driver.h  driver_tl321x.h  emi.h  flash.c  flash.h  lpc.h  mspi.h  s7816.h  spi.c  usbhw.c  usbhw.h
tlsr9/drivers/TL321X/compatibility_pack/: cmpt.h
tlsr9/drivers/TL321X/error_handler/: error_handler.h
tlsr9/drivers/TL321X/ext_driver/: driver_ext.h  ext_audio.h  ext_codec.h  ext_hci_uart.h  ext_misc.h  ext_pm.h  ext_uart.h  mcu_boot.h  mcu_config.h  software_pa.h
tlsr9/drivers/TL321X/ext_driver/driver_internal/: ext_lib.h
tlsr9/drivers/TL321X/ext_driver/driver_lib/: driver_lib.h  ext_aes.h  ext_lib.h  ext_rf.h
tlsr9/drivers/TL321X/ext_peripherals/codec_0581/: codec_0581.h
tlsr9/drivers/TL321X/flash/: flash_common.h  flash_mid146085.h  flash_mid1460c8.h  flash_mid156085.h  flash_mid1560c8.h  flash_mid166085.h  flash_mid1660c8.h  flash_mid186085.h  flash_type.h
tlsr9/drivers/TL321X/lib/include/: aoa.h  core.h  emi.h  flash_base.h  flash_prot.h  plic.h  sys.h
tlsr9/drivers/TL321X/reg_include/: register.h
tlsr9/drivers/W91/: core.h  driver_w91.h  flash.h  plic.h  sys.h
tlsr9/drivers/W91/reg_include/: register.h
tlsr9/lib/: c_alloc.c
(+220 files in other folders)
